# CPU-Emulator

./: .gitignore  CMakeLists.txt  README.md  Test.cpp  fact.txt  fibb.txt  recursion.txt  stack.cpp  stack.h  sum.txt
CPUEmulator/: emul.cpp
CPUEmulator/Command/: Command.cpp  Command.h
CPUEmulator/Parser/: parser.cpp  parser.h
CPUEmulator/exceptions/: exceptions.h
Stack/: CMakeLists.txt  Test.cpp  stack.cpp  stack.h
